Hide show prev/next appropriately and use visibility hidden to prevent positioning from getting messed up

--- a/styles/store.less
+++ b/styles/store.less
@@ -23,6 +23,8 @@
 
 .cf { .clearfix; }
 
+.invisible { visibility: hidden; }
+
 body {
 	background: black;
 	font-size: 	62.5%;
